[package]
name = "pallas-gpu-msm"
version = "0.1.0"
edition = "2021"
description = "The first GPU-accelerated Multi-Scalar Multiplication (MSM) for the Pallas elliptic curve"
license = "Apache-2.0"
repository = "https://github.com/GeoffreyWang1117/HanFei"
keywords = ["pallas", "msm", "gpu", "cuda", "zero-knowledge"]
categories = ["cryptography", "mathematics"]
readme = "README.md"

[dependencies]
halo2curves = "0.6"
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
log = "0.4"

[dev-dependencies]
rand_core = "0.6"
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
chrono = "0.4"

[build-dependencies]
cc = "1.0"

[features]
default = ["gpu"]
gpu = []

[[bench]]
name = "msm_bench"
harness = false

[[example]]
name = "basic_msm"

[[example]]
name = "full_benchmark"
